Add completed work experience page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    /*
+        https://stackoverflow.com/questions/12699800/smarter-word-break-in-css#:~:text=For%20smart%20word%20breaks%2C%20or,line%20when%20a%20break%20occurs.
+    */
+    .text-wrap {
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        -ms-word-break: break-all;
+        word-break: break-word;
+        -ms-hyphens: auto;
+        -moz-hyphens: auto;
+        -webkit-hyphens: auto;
+        hyphens: auto;
+    }
+}
